# markflow

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_MODES.md  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-ai-researcher.md  gsd-ai-researcher.toml  gsd-debugger.md  gsd-debugger.toml  gsd-domain-researcher.md  gsd-domain-researcher.toml  gsd-eval-auditor.md  gsd-eval-auditor.toml  gsd-eval-planner.md  gsd-eval-planner.toml  gsd-executor.md  gsd-executor.toml  gsd-framework-selector.md  gsd-framework-selector.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-ui-researcher.md  gsd-ui-researcher.toml  gsd-user-profiler.md  gsd-user-profiler.toml  gsd-verifier.md  gsd-verifier.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.planning/: AGENT_ROLES.md  CONTEXT_FOR_AGENTS.md  COPILOT_HANDOFF_PROTOCOL.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SKILLS_FOR_COPILOT.md  STATE.md  config.json  copilot-state.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/decisions/: DECISION_LOG.md
.planning/specs/: feature_acceptance_matrix.md  features.json
docs/: CHANGELOG_DECISOES.md  INTEGRATION_COPILOT_CODEX.md
docs/architecture/: event-contracts.md  service-isolation-policy.md
markflow/: __init__.py  benchmark_ingestion.py  cli.py  llm_client.py  llm_types.py  model_selection.py  pipeline.py  provider_presets.py  routing.py  security.py  tui.py
markflow/extraction/: __init__.py  cache.py  local_ocr.py  orchestrator.py  page_analysis.py  rendering.py  reporting.py  review.py  types.py
scripts/: check_service_boundaries.py  run_with_timeout.py
services/: README.md  __init__.py
services/api/: Dockerfile  api.py  app.py  broker.py  dispatch.py  requirements.txt  state_models.py  state_store.py  worker_dispatcher.py
services/frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
services/worker/: Dockerfile  __init__.py  app.py  broker.py  entrypoint.py
tests/: conftest.py
tests/functional/: test_end_to_end.py  test_golden_regressions.py
tests/integration/: test_document_flow.py
tests/spec/: test_copilot_codex_integration.py  test_decision_context_governance.py  test_gsd_spec_traceability.py
tests/unit/: test_benchmark_ingestion_additional.py  test_cli_behavior.py  test_coverage_phase5_remaining_small.py  test_coverage_phase5_small_modules.py  test_event_contract_schemas.py  test_extraction_modules.py  test_extraction_submodules.py  test_llm_and_selection.py  test_llm_client_additional.py  test_llm_client_error_paths.py  test_llm_client_phase5_coverage.py  test_pipeline_async_behavior.py  test_pipeline_core.py  test_pipeline_phase2_coverage.py  test_pipeline_phase5_coverage.py  test_pipeline_phase5_runtime_adapters.py  test_run_with_timeout.py  (+11 more)
(+129 files in other folders)
