[project]
name = "markflow"
version = "1.0.0"
description = "OCR-first provider-agnostic PDF extraction pipeline with benchmark-driven model routing and interactive setup."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "MarkFlow Contributors"}
]
license = {text = "MIT"}
dependencies = [
  "aiohttp==3.12.13",
  "easyocr==1.7.2",
  "markdown==3.8.2",
  "numpy==2.2.6",
  "onnxruntime==1.22.1",
  "Pillow==11.2.1",
  "psutil==7.0.0",
  "questionary==2.1.1",
  "PyMuPDF==1.26.1",
  "pytesseract==0.3.13",
  "python-dotenv==1.1.1",
  "rapidocr-onnxruntime==1.4.4",
  "rich==14.0.0",
  "tqdm==4.67.1",
]

[project.scripts]
markflow = "markflow.cli:main"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
exclude = ["venv*", "poppler"]
