[project]
name = "markflow"
version = "1.0.0"
description = "OCR-first provider-agnostic PDF extraction pipeline with benchmark-driven model routing and interactive setup."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "MarkFlow Contributors"}
]
license = "MIT"
dependencies = [
  "aiohttp==3.13.5",
  "bleach==6.2.0",
  "easyocr==1.7.2",
  "markdown==3.8.2",
  "numpy==2.2.6",
  "onnxruntime==1.22.1",
  "Pillow==12.2.0",
  "psutil==7.0.0",
  "questionary==2.1.1",
  "PyMuPDF==1.26.1",
  "pytesseract==0.3.13",
  "python-dotenv==1.1.1",
  "rapidocr-onnxruntime==1.4.4",
  "rich==14.0.0",
  "tqdm==4.67.1",
]

[project.optional-dependencies]
web = [
  "fastapi==0.136.0",
  "pydantic==2.11.7",
  "redis==5.2.1",
  "starlette==0.52.1",
  "uvicorn==0.35.0",
]
dev = [
  "black==26.3.1",
  "coverage[toml]==7.10.6",
  "fastapi==0.136.0",
  "flake8==7.3.0",
  "hypothesis==6.138.14",
  "httpx==0.28.1",
  "jsonschema==4.25.0",
  "mypy==1.16.1",
  "pydantic==2.11.7",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
  "redis==5.2.1",
  "ruff==0.12.7",
  "starlette==0.52.1",
  "uvicorn==0.35.0",
]

[project.scripts]
markflow = "markflow.cli:main"

[tool.setuptools.packages.find]
include = ["markflow*", "services*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "--strict-markers -p no:cacheprovider --basetemp=test-tmp --cov=markflow --cov-report=term-missing --cov-report=xml"
markers = [
  "unit: fast isolated tests",
  "integration: multi-component tests",
  "functional: end-to-end functional tests",
  "spec: GSD requirement/spec/test traceability tests",
  "network: tests that require external network access",
  "slow: slower execution paths",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["markflow", "app"]

[tool.coverage.report]
fail_under = 100
omit = [
  "tests/*",
  "*/Temp/*",
]
exclude_also = [
  "pragma: no cover",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
allow_redefinition = true

[tool.flake8]
max-line-length = 100
exclude = ["venv*", "poppler"]
